--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DEMO</title>
+	<script src="tool.js" type="text/javascript" charset="utf-8"></script>
 	<script src="base.js" type="text/javascript" charset="utf-8"></script>
 	<script src="index.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="style.css">
@@ -33,7 +34,9 @@
 	<div class="button"> <input type="button" name="submit" value="" class="submit"></div>
 	<div class="other">注册新用户|忘记密码</div>
 </div>
-
+<div id="screen"></div>
 	
+<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
+<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
 </body>
 </html>
