--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>DEMO</title>
 	<script src="tool.js" type="text/javascript" charset="utf-8"></script>
 	<script src="base.js" type="text/javascript" charset="utf-8"></script>
+	<script src="base_drag.js" type="text/javascript" charset="utf-8"></script>
 	<script src="index.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="style.css">
 </head>
