--- a/demo.html
+++ b/demo.html
@@ -2,26 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>事件绑定</title>
+	<title>DOM加载</title>
 	<script src="tool.js" type="text/javascript" charset="utf-8"></script>
 	<script src="base.js" type="text/javascript" charset="utf-8"></script>
 	<script src="demo.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 <body>
-	<input id="btn" type="button" name="btn" value="OK">
-
+	
 	<div id="box">
-		box
 	</div>
-	<p>
-		<span>pspan</span>
-		<span id="span">pspan</span>
-		<span>pspan</span>
-	</p>
-	<div class="doc">
-		<span>dspan</span>
-		<span id="ds">dspan</span>
-		<span class="ds">dspan</span>
+	<input type="button" id="btn" name="btn" value="OK">
+	<div id = "back">
 	</div>
+	
+
 </body>
 </html>
