--- a/index.html
+++ b/index.html
@@ -24,11 +24,74 @@
 			<li><a href="###" title="">退出</a></li>
 		</ul>
 	</div>
-	<div class="login">
-		登录
-	</div>
+	<div class="reg">注册</div>
+	<div class="login">登录</div>	
+</div>
+
+<div id="reg">
+	<h2><img src="images/close.png" alt="" class="close">会员注册</h2>
+	<form name="reg">
+		<dl>
+			<dd>用 户 名：<input type="text" name="user" class="text">
+				<span class="info info_user">请输入用户名，2-20位，由字母数字下划线组成</span>
+				<span class="error error_user">输入不合法请重新输入！</span>
+				<span class="succ succ_user">可用</span>
+			</dd>
+			<dd>密&nbsp;&nbsp;码：<input type="password" name="pass" class="text">
+				<span class="info info_pass">
+					<p>安全级别:<strong class="s s1">■</strong><strong class="s s2">■</strong><strong class="s s3">■</strong><strong class="s s4" style="font-weight:normal;"></strong></p>
+					<p><strong class="q1" style="font-weight: normal;">○</strong> 6-20 个字符</p>
+					<p><strong class="q2" style="font-weight: normal;">○</strong> 只能包含大小写字母、数字和非空格字符</p>
+					<p><strong class="q3" style="font-weight: normal;">○</strong> 大、小写字母、数字、非空字符，2 种以</p>
+				</span>
+				<span class="error error_pass">输入不合法请重新输入！</span>
+				<span class="succ succ_pass">可用</span>
+			</dd>
+			<dd>密码确认：<input type="password" name="notpass" class="text">
+				<span class="info info_notpass">请再次输入密码！</span>
+				<span class="error error_notpass">密码不一致，请再次输入!</span>
+				<span class="succ succ_notpass">可用</span>
+			</dd>
+			<dd>提&nbsp;&nbsp;问：<select name="ques">
+				<option value="0">- - - - 请选择- - - -</option>
+				<option value="1">- - 您最喜欢吃的菜</option>
+				<option value="2">- - 您的狗狗的名字</option>
+				<option value="3">- - 您的出生地</option>
+				<option value="4">- - 您最喜欢的明星</option>
+			</select> </dd>
+			<dd>回&nbsp;&nbsp;答：<input type="text" name="ans" class="text">
+				<span class="info info_ans">请输入回答，2-32位！</span>
+				<span class="error error_ans">回答不合法，请再次输入!</span>
+				<span class="succ succ_ans">可用</span>
+			</dd>
+			<dd>电子邮箱：<input type="text" name="email" class="text" autocomplete="off">
+				<span class="info info_email">请输入电子邮箱！</span>
+				<span class="error error_email">邮箱不合法，请再次输入!</span>
+				<span class="succ succ_email">可用</span>
+				<ul class="all_email">
+					<li><span></span>@qq.com</li>
+					<li><span></span>@163.com</li>
+					<li><span></span>@sohu.com</li>
+					<li><span></span>@sina.com.cn</li>
+					<li><span></span>@gmail.com</li>
+				</ul>
+			</dd>
+			<dd class="birthday">生&nbsp;&nbsp;日：<select name="year">
+				<option value="0"> - 年 - </option>
+			</select>-<select name="month">
+				<option value="1"> - 月 - </option>
+			</select>-<select name="day">
+				<option value="2"> - 日 - </option>
+			</select></dd>
+			<dd style="height: 105px;"><span style="vertical-align: top;">备&nbsp;&nbsp;注：</span><textarea name="ps"></textarea></dd>
+			<dd style="display: block;" class="ps">还可以输入<strong class="num">5</strong>个字</dd>
+			<dd style="display: none;" class="ps">已超过<strong class="num">35</strong>个字 <span class="clear">清尾</span></dd>
+			<dd style="padding: 0 0 0 80px;"><input type="button" class="submit"></dd>
+		</dl>
+	</form>
 	
 </div>
+
 <div id="login">
 	<h2><img src="images/close.png" alt="" class="close">网站登录</h2>
 	<div class="user">账号: <input type="text" name="user" class="text"></div>
@@ -37,9 +100,66 @@
 	<div class="other">注册新用户|忘记密码</div>
 </div>
 <div id="screen"></div>
-
-<div id="test">
 	
+<div id="nav">
+	<ul class="about">
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+	<ul class="black">
+		<li>首页</li>
+		<li>博文列表</li>
+		<li>精彩相册</li>
+		<li>动感音乐</li>
+		<li>关于我</li>
+	</ul>
+	<div class="nav_bg">
+		<ul class="white">
+			<li>首页</li>
+			<li>博文列表</li>
+			<li>精彩相册</li>
+			<li>动感音乐</li>
+			<li>关于我</li>
+		</ul>
+	</div>
+</div>
+
+
+<div id="main">
+	<div id="sidebar">
+		<h2>教育博文1</h2>
+		<ul>
+		<li><a href="###">靠自己95 后女生被16 所国外名校录取</a></li>
+		<li><a href="###">00 后的成长烦恼：压力巨大成隐形杀手</a></li>
+		<li><a href="###">一年自学MIT 的33 门课? 疯狂学习方法</a></li>
+		<li><a href="###">申请赴美读研人数下降5% 7 年来首遇冷</a></li>
+		<li><a href="###">西政“萌招聘”秀出辣椒与美女被赞</a></li>
+		</ul>
+
+		<h2>教育博文2</h2>
+		<ul>
+		<li><a href="###">靠自己95 后女生被16 所国外名校录取</a></li>
+		<li><a href="###">00 后的成长烦恼：压力巨大成隐形杀手</a></li>
+		<li><a href="###">一年自学MIT 的33 门课? 疯狂学习方法</a></li>
+		<li><a href="###">申请赴美读研人数下降5% 7 年来首遇冷</a></li>
+		<li><a href="###">西政“萌招聘”秀出辣椒与美女被赞</a></li>
+		</ul>
+
+		<h2>教育博文3</h2>
+		<ul>
+		<li><a href="###">靠自己95 后女生被16 所国外名校录取</a></li>
+		<li><a href="###">00 后的成长烦恼：压力巨大成隐形杀手</a></li>
+		<li><a href="###">一年自学MIT 的33 门课? 疯狂学习方法</a></li>
+		<li><a href="###">申请赴美读研人数下降5% 7 年来首遇冷</a></li>
+		<li><a href="###">西政“萌招聘”秀出辣椒与美女被赞</a></li>
+		</ul>
+	</div>
+	<div id="index">
+		index
+	</div>
 </div>
 
 <div id="share">
@@ -65,15 +185,6 @@
 	<div class="share_footer"><a href="###">百度分享</a><span></span></div>
 </div>	
 
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
-<p>1</p><p>1</p><p>1</p><p>1</p><p>1</p><p>1</p>
 
 </body>
 </html>
